--- a/Task4/style.css
+++ b/Task4/style.css
@@ -70,7 +70,7 @@ input.error {
 button {
     width: 100%;
     padding: 0.75rem;
-    background-color: #05284e;
+    background-color: #0a3b70;
     color: white;
     border: none;
     border-radius: 4px;
