--- a/Task5/views/index.ejs
+++ b/Task5/views/index.ejs
@@ -5,9 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Api Integration</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="/Task5/public/stylesheets/style.css">
 
 </head>
-<body>
-    <h1>hey</h1>
+<body class="bg-zinc-900">
+      <div class="w-full h-full bg-zinc-900 p-10 text-white">
+        <h1 class="text-3xl tracking-tighter mb-3">Creat User</h1>
+        <form action="">
+            <input class="px-5 py-2 bg-transparent border-2 border-zinc-800 outline-none rounded-lg"  type="text" placeholder="name">
+            <input class="px-5 py-2 bg-transparent border-2 border-zinc-800 outline-none rounded-lg"  type="text" placeholder="email">
+            <input class="px-5 py-2 bg-transparent border-2 border-zinc-800 outline-none rounded-lg"  type="text" placeholder="image">
+            <input class="px-5 py-2 bg-blue-500 rounded-lg ml-3" type="submit" value="Creat Users">
+        </form>
+      </div>
 </body>
 </html>
