feat: implement user creation and display functionality with mongoose integration

--- a/Task5/views/read.ejs
+++ b/Task5/views/read.ejs
@@ -10,12 +10,22 @@
 </head>
 <body class="bg-zinc-900">
       <div class="w-full h-full bg-zinc-900 p-10 text-white">
-        <h1 class="text-3xl tracking-tighter mb-3">All Users</h1>
-        <div class="users">
-            <div class="user max-w-72 p-5 bg-zinc-800 rounded-lg">
-                <div class="w-full h-55 bg-red-500 rounded-lg"></div>
+        <a class="text-blue-500" href="/">Back to Home</a>
+        <h1 class="text-3xl tracking-tighter mb-3 mt-10">All Users</h1>
+        <div class="users flex gap-3 flex-wrap">
+            <div class="user w-72 p-5 bg-zinc-800 rounded-lg">
+                <div class="w-full h-55 bg-zinc-700 rounded-lg"></div>
                 <h3 class="text-xl mt-4 tracking-tighter">Soumen Das</h3>
-                <h5 class="bg-zinc-600">Soumen2005@gmail.com</h5>
+                <h5 class="bg-zinc-700">Soumen2005@gmail.com</h5>
+                <div class="flex gap-3 mt-4">
+                    <a class="text-blue-500" href="">Edit User</a>
+                    <a class="text-red-500" href="">Delete User</a>
+                </div>
+            </div>
+            <div class="user w-72 p-5 bg-zinc-800 rounded-lg">
+                <div class="w-full h-55 bg-zinc-700 rounded-lg"></div>
+                <h3 class="text-xl mt-4 tracking-tighter">Soumen Das</h3>
+                <h5 class="bg-zinc-700">Soumen2005@gmail.com</h5>
                 <div class="flex gap-3 mt-4">
                     <a class="text-blue-500" href="">Edit User</a>
                     <a class="text-red-500" href="">Delete User</a>
