--- a/Task5/views/index.ejs
+++ b/Task5/views/index.ejs
@@ -10,11 +10,14 @@
 </head>
 <body class="bg-zinc-900">
       <div class="w-full h-full bg-zinc-900 p-10 text-white">
+        <div class="nav mb-10">
+            <a class="text-blue-500" href="/read">Read Users</a>
+        </div>
         <h1 class="text-3xl tracking-tighter mb-3">Creat User</h1>
-        <form action="">
-            <input class="px-5 py-2 bg-transparent border-2 border-zinc-800 outline-none rounded-lg"  type="text" placeholder="name">
-            <input class="px-5 py-2 bg-transparent border-2 border-zinc-800 outline-none rounded-lg"  type="text" placeholder="email">
-            <input class="px-5 py-2 bg-transparent border-2 border-zinc-800 outline-none rounded-lg"  type="text" placeholder="image">
+        <form action="/create" method="post">
+            <input class="px-5 py-2 bg-transparent border-2 border-zinc-800 outline-none rounded-lg"  type="text" name="name" placeholder="name">
+            <input class="px-5 py-2 bg-transparent border-2 border-zinc-800 outline-none rounded-lg"  type="text" name="email" placeholder="email">
+            <input class="px-5 py-2 bg-transparent border-2 border-zinc-800 outline-none rounded-lg"  type="text" name="image" placeholder="image url">
             <input class="px-5 py-2 bg-blue-500 rounded-lg ml-3" type="submit" value="Creat Users">
         </form>
       </div>
