feat: enhance user read functionality and improve UI with dynamic user data

--- a/Task5/views/read.ejs
+++ b/Task5/views/read.ejs
@@ -1,38 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Api Integration</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <link rel="stylesheet" href="/Task5/public/stylesheets/style.css">
-
-</head>
-<body class="bg-zinc-900">
-      <div class="w-full h-full bg-zinc-900 p-10 text-white">
-        <a class="text-blue-500" href="/">Back to Home</a>
-        <h1 class="text-3xl tracking-tighter mb-3 mt-10">All Users</h1>
-        <div class="users flex gap-3 flex-wrap">
-            <div class="user w-72 p-5 bg-zinc-800 rounded-lg">
-                <div class="w-full h-55 bg-zinc-700 rounded-lg"></div>
-                <h3 class="text-xl mt-4 tracking-tighter">Soumen Das</h3>
-                <h5 class="bg-zinc-700">Soumen2005@gmail.com</h5>
-                <div class="flex gap-3 mt-4">
-                    <a class="text-blue-500" href="">Edit User</a>
-                    <a class="text-red-500" href="">Delete User</a>
-                </div>
-            </div>
-            <div class="user w-72 p-5 bg-zinc-800 rounded-lg">
-                <div class="w-full h-55 bg-zinc-700 rounded-lg"></div>
-                <h3 class="text-xl mt-4 tracking-tighter">Soumen Das</h3>
-                <h5 class="bg-zinc-700">Soumen2005@gmail.com</h5>
-                <div class="flex gap-3 mt-4">
-                    <a class="text-blue-500" href="">Edit User</a>
-                    <a class="text-red-500" href="">Delete User</a>
-                </div>
-            </div>
+    <link rel="stylesheet" href="/Task5/public/stylesheets/style.css" />
+  </head>
+  <body class="bg-zinc-900">
+    <div class="w-full h-full bg-zinc-900 p-10 text-white">
+      <a class="text-blue-500" href="/">Back to Home</a>
+      <h1 class="text-3xl tracking-tighter mb-3 mt-10">All Users</h1>
+      <div class="users flex gap-3 flex-wrap">
+        <% users.forEach(function(user){ %>
+        <div class="user w-72 p-5 bg-zinc-800 rounded-lg">
+          <div class="w-full h-55 bg-zinc-700 rounded-lg">
+            <img class="w-full h-full rounded-lg bg-zinc-700 overflow-hidden" src="<%= user.image %>" alt="">
+          </div>
+          <h3 class="text-xl mt-4 tracking-tighter"><%= user.name %></h3>
+          <h5 class="bg-zinc-700"><%= user.email %></h5>
+          <div class="flex gap-3 mt-4">
+            <a class="text-blue-500" href="">Edit User</a>
+            <a class="text-red-500" href="">Delete User</a>
+          </div>
         </div>
-
+        <% }) %>
       </div>
-</body>
+    </div>
+  </body>
 </html>
