--- a/Task5/views/read.ejs
+++ b/Task5/views/read.ejs
@@ -20,7 +20,7 @@
           <h3 class="text-xl mt-4 tracking-tighter"><%= user.name %></h3>
           <h5 class="bg-zinc-700"><%= user.email %></h5>
           <div class="flex gap-3 mt-4">
-            <a class="text-blue-500" href="">Edit User</a>
+            <a class="text-blue-500" href="/edit/<%= user.id %>">Edit User</a>
             <a class="text-red-500" href="/delete/<%= user.id %>">Delete User</a>
           </div>
         </div>
